[tool.poetry]
name = "forms"
version = "0.0.1"
description = ""
authors = ["Sergei <shatidox@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
